[tool.poetry]
name = "dreamfit-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Derkach <jarvis1tube@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.1"
uvicorn = "^0.14.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-dotenv = "^0.19.0"
dependency-injector = "^4.35.2"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.9.3"
black = "^21.7b0"
pytest = "^6.2.4"
sqlalchemy2-stubs = "^0.0.2-alpha.17"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 99


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
